2002-04-19  Don Porter  <dgp@users.sourceforge.net>

	* doc/msgcat.n:
	* library/msgcat/msgcat.tcl:
	* library/msgcat/pkgIndex.tcl:  Added [mcload] to the export list
	of msgcat; bumped to 1.2.3.  [Bug 544727]

2002-04-20  Daniel Steffen  <das@users.sourceforge.net>

	* generic/tclInt.decls:
	* generic/tclIntPlatDecls.h:
	* generic/tclStubInit.c:
	* mac/tclMacFCmd.c:
	* mac/tclMacFile.c:
	* mac/tclMacUtil.c: Modified TclpObjNormalizePath to be alias
	file aware, and replaced various calls to FSpLocationFrom*Path
	by calls to new alias file aware versions FSpLLocationFrom*Path.
	The alias file aware routines don't resolve the last component of
	a path if it is an alias. This allows [file copy/delete] etc. to
	act correctly on alias files. (c.f. discussion in Bug #511666)

2002-04-19  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* tests/lindex.test (lindex-3.7): 
	* generic/tclUtil.c (TclGetIntForIndex): Stopped indexes from
	hitting wide ints.  [Bug #526717]

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclNamesp.c:
	* tests/info.test: [Bug 545325] info level didn't report
	namespace eval, bug report by Richard Suchenwirth.

2002-04-18  Don Porter  <dgp@users.sourceforge.net>

	* doc/subst.n:  Clarified documentation on handling unusual return
	codes during substitution, and on variable substitutions implied
	by command substitution, and vice versa.  [Bug 536838]

2002-04-18  Donal K. Fellows  <fellowsd@cs.man.ac.uk>

	* generic/tclCmdIL.c (InfoBodyCmd): 
	* tests/info.test (info-2.6): Proc bodies without string reps
	would report as empty [Bug #545644]

	* generic/tclCmdMZ.c (Tcl_SubstObj): More clarification for
	comment on behaviour when substitutions are not well-formed,
	prompted by [Bug #536831]; alas, removing the ill-defined
	behaviour is a lot of work.

2002-04-18  Miguel Sofer  <msofer@users.sourceforge.net>

	* generic/tclExecute.c:
	* tests/expr-old.test: fix for [Bug #542588] (Phil Ehrens), where